# AGEFEM-for-Phonon-BTE

./: AGEFEM_Poros  CMakeLists.txt  README.md
Mesh/Porous/: porous_1.msh  porous_10.msh  porous_2.msh  porous_3.msh  porous_4.msh  porous_5.msh  porous_6.msh  porous_7.msh  porous_8.msh  porous_9.msh
includes/DGSolver/: DGSolver.h
includes/Integration/: Integration.h
includes/MacroProperty/: MacroProperty.h
includes/Output/: Output.h
includes/SpatialMesh/: SpatialMesh.h  data_struct.h
includes/Utility/: Utility.h
includes/VelocityMesh/: VelocityMesh.h
includes/minurbs/: minurbs.h
includes/minurbs/core/: basis.h  curve.h  evaluate.h
results/: PlotTemp.ipynb
src/: AGEFEM_Poros.cpp  CMakeLists.txt
src/DGSolver/: CMakeLists.txt  DGSolver.cpp
src/Integration/: CMakeLists.txt  Integration.cpp
src/MacroProperty/: CMakeLists.txt  MacroProperty.cpp
src/Output/: CMakeLists.txt  Output.cpp
src/SpatialMesh/: CMakeLists.txt  SpatialMesh.cpp
src/Utility/: CMakeLists.txt  Utility.cpp
src/VelocityMesh/: CMakeLists.txt  VelocityMesh.cpp
